@@ -45,10 +45,25 @@ DECL|class|NamedList
 specifier|public
 class|class
 name|NamedList
+parameter_list|<
+name|T
+parameter_list|>
 implements|implements
 name|Cloneable
 implements|,
 name|Serializable
+implements|,
+name|Iterable
+argument_list|<
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|T
+argument_list|>
+argument_list|>
 block|{
 DECL|field|nvPairs
 specifier|protected
@@ -124,9 +139,14 @@ argument_list|)
 return|;
 block|}
 comment|/**    * The value of the pair at the specified List index    *    * @return may be null    */
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
 DECL|method|getVal
 specifier|public
-name|Object
+name|T
 name|getVal
 parameter_list|(
 name|int
@@ -134,6 +154,9 @@ name|idx
 parameter_list|)
 block|{
 return|return
+operator|(
+name|T
+operator|)
 name|nvPairs
 operator|.
 name|get
@@ -157,7 +180,7 @@ parameter_list|(
 name|String
 name|name
 parameter_list|,
-name|Object
+name|T
 name|val
 parameter_list|)
 block|{
@@ -201,23 +224,22 @@ name|name
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Modifies the value of the pair at the specified index.    */
+comment|/**    * Modifies the value of the pair at the specified index.    * @return the value that used to be at index    */
 DECL|method|setVal
 specifier|public
-name|void
+name|T
 name|setVal
 parameter_list|(
 name|int
 name|idx
 parameter_list|,
-name|Object
+name|T
 name|val
 parameter_list|)
 block|{
-name|nvPairs
-operator|.
-name|set
-argument_list|(
+name|int
+name|index
+init|=
 operator|(
 name|idx
 operator|<<
@@ -225,10 +247,32 @@ literal|1
 operator|)
 operator|+
 literal|1
+decl_stmt|;
+name|T
+name|old
+init|=
+operator|(
+name|T
+operator|)
+name|nvPairs
+operator|.
+name|get
+argument_list|(
+name|index
+argument_list|)
+decl_stmt|;
+name|nvPairs
+operator|.
+name|set
+argument_list|(
+name|index
 argument_list|,
 name|val
 argument_list|)
 expr_stmt|;
+return|return
+name|old
+return|;
 block|}
 comment|/**    * Scans the list sequentially beginning at the specified index and    * returns the index of the first pair with the specified name.    *    * @param name name to look for, may be null    * @param start index to begin searching from    * @return The index of the first matching pair, -1 if no match    */
 DECL|method|indexOf
@@ -314,7 +358,7 @@ block|}
 comment|/**    * Gets the value for the first instance of the specified name    * found.    *     * @return null if not found or if the value stored was null.    * @see #indexOf    * @see #get(String,int)    */
 DECL|method|get
 specifier|public
-name|Object
+name|T
 name|get
 parameter_list|(
 name|String
@@ -333,7 +377,7 @@ block|}
 comment|/**    * Gets the value for the first instance of the specified name    * found starting at the specified index.    *     * @return null if not found or if the value stored was null.    * @see #indexOf    */
 DECL|method|get
 specifier|public
-name|Object
+name|T
 name|get
 parameter_list|(
 name|String
@@ -518,56 +562,37 @@ name|boolean
 name|addAll
 parameter_list|(
 name|Map
+argument_list|<
+name|String
+argument_list|,
+name|T
+argument_list|>
 name|args
 parameter_list|)
 block|{
-name|Set
-name|eset
-init|=
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|T
+argument_list|>
+name|entry
+range|:
 name|args
 operator|.
 name|entrySet
 argument_list|()
-decl_stmt|;
-name|Iterator
-name|iter
-init|=
-name|eset
-operator|.
-name|iterator
-argument_list|()
-decl_stmt|;
-while|while
-condition|(
-name|iter
-operator|.
-name|hasNext
-argument_list|()
-condition|)
+control|)
 block|{
-name|Map
-operator|.
-name|Entry
-name|entry
-init|=
-operator|(
-name|Map
-operator|.
-name|Entry
-operator|)
-name|iter
-operator|.
-name|next
-argument_list|()
-decl_stmt|;
 name|add
 argument_list|(
 name|entry
 operator|.
 name|getKey
-argument_list|()
-operator|.
-name|toString
 argument_list|()
 argument_list|,
 name|entry
@@ -593,6 +618,9 @@ name|boolean
 name|addAll
 parameter_list|(
 name|NamedList
+argument_list|<
+name|T
+argument_list|>
 name|nl
 parameter_list|)
 block|{
@@ -646,6 +674,214 @@ name|NamedList
 argument_list|(
 name|newList
 argument_list|)
+return|;
+block|}
+comment|//----------------------------------------------------------------------------
+comment|// Iterable interface
+comment|//----------------------------------------------------------------------------
+comment|/**    * Support the Iterable interface    */
+DECL|method|iterator
+specifier|public
+name|Iterator
+argument_list|<
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|T
+argument_list|>
+argument_list|>
+name|iterator
+parameter_list|()
+block|{
+specifier|final
+name|NamedList
+name|list
+init|=
+name|this
+decl_stmt|;
+name|Iterator
+argument_list|<
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|T
+argument_list|>
+argument_list|>
+name|iter
+init|=
+operator|new
+name|Iterator
+argument_list|<
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|T
+argument_list|>
+argument_list|>
+argument_list|()
+block|{
+name|int
+name|idx
+init|=
+literal|0
+decl_stmt|;
+specifier|public
+name|boolean
+name|hasNext
+parameter_list|()
+block|{
+return|return
+name|idx
+operator|<
+name|list
+operator|.
+name|size
+argument_list|()
+return|;
+block|}
+specifier|public
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|T
+argument_list|>
+name|next
+parameter_list|()
+block|{
+specifier|final
+name|int
+name|index
+init|=
+name|idx
+operator|++
+decl_stmt|;
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|T
+argument_list|>
+name|nv
+init|=
+operator|new
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|T
+argument_list|>
+argument_list|()
+block|{
+specifier|public
+name|String
+name|getKey
+parameter_list|()
+block|{
+return|return
+name|list
+operator|.
+name|getName
+argument_list|(
+name|index
+argument_list|)
+return|;
+block|}
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+specifier|public
+name|T
+name|getValue
+parameter_list|()
+block|{
+return|return
+operator|(
+name|T
+operator|)
+name|list
+operator|.
+name|getVal
+argument_list|(
+name|index
+argument_list|)
+return|;
+block|}
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+name|getKey
+argument_list|()
+operator|+
+literal|"="
+operator|+
+name|getValue
+argument_list|()
+return|;
+block|}
+specifier|public
+name|T
+name|setValue
+parameter_list|(
+name|T
+name|value
+parameter_list|)
+block|{
+return|return
+operator|(
+name|T
+operator|)
+name|list
+operator|.
+name|setVal
+argument_list|(
+name|index
+argument_list|,
+name|value
+argument_list|)
+return|;
+block|}
+block|}
+decl_stmt|;
+return|return
+name|nv
+return|;
+block|}
+specifier|public
+name|void
+name|remove
+parameter_list|()
+block|{
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|()
+throw|;
+block|}
+block|}
+decl_stmt|;
+return|return
+name|iter
 return|;
 block|}
 block|}
